--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.words": [
         "camelcase",
         "compat",
+        "kakao",
         "linebreak",
+        "naver",
         "plusplus",
         "popperjs",
         "sonarjs",
