added videos and a new fancy window layout

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,58 @@
 {
     "cSpell.words": [
+        "Boramae",
         "camelcase",
+        "Changsin",
         "compat",
+        "Daechi",
+        "Daerim",
+        "Dobong",
+        "Dongdaemun",
+        "Dongjak",
+        "Dutchie",
+        "Eunpyeong",
+        "Gangbuk",
+        "Gangdong",
+        "Gangnam",
+        "Gangseo",
+        "Geumcheon",
+        "Gungjeong",
+        "Guro",
+        "Gwanak",
+        "Gwangjin",
+        "hyehwa",
+        "Jegi",
+        "Jongno",
+        "Jung",
+        "Junggye",
+        "Jungnang",
         "kakao",
         "linebreak",
+        "Mapo",
+        "Muak",
+        "Myeong",
         "naver",
+        "Nowon",
         "plusplus",
+        "Pojangmachas",
         "popperjs",
+        "Sangam",
+        "Seocho",
+        "Seodaemun",
+        "seolleongtang",
+        "Seongbuk",
+        "Seongdong",
+        "Sinchon",
+        "Sindaebang",
         "sonarjs",
+        "Songpa",
+        "Suyu",
         "wvanderp",
+        "Yangcheon",
+        "Yeongdeungpo",
+        "Yeouido",
+        "Yongsan",
+        "Yonsei",
         "youtubedl"
     ]
 }
