--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
+        "Ajumma",
         "Boramae",
+        "Bukhansan",
         "camelcase",
         "Changsin",
+        "Cheongdam",
         "compat",
         "Daechi",
         "Daerim",
@@ -21,6 +24,7 @@
         "Gwanak",
         "Gwangjin",
         "hyehwa",
+        "imgur",
         "Jegi",
         "Jongno",
         "Jung",
@@ -47,6 +51,7 @@
         "sonarjs",
         "Songpa",
         "Suyu",
+        "Wbkw",
         "wvanderp",
         "Yangcheon",
         "Yeongdeungpo",
