--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "Ajumma",
+        "Ang's",
         "Boramae",
         "Bukhansan",
         "camelcase",
@@ -8,24 +9,32 @@
         "Cheongdam",
         "compat",
         "Daechi",
+        "Daelim",
         "Daerim",
         "Dobong",
         "Dongdaemun",
         "Dongjak",
+        "Dongmyo",
         "Dutchie",
+        "Euljiro",
         "Eunpyeong",
+        "Gaepo",
         "Gangbuk",
         "Gangdong",
         "Gangnam",
         "Gangseo",
         "Geumcheon",
+        "Goshiwon",
         "Gungjeong",
         "Guro",
         "Gwanak",
         "Gwangjin",
+        "Heukseok",
         "hyehwa",
         "imgur",
         "Jegi",
+        "Jeong",
+        "Jingwan",
         "Jongno",
         "Jung",
         "Junggye",
@@ -36,22 +45,29 @@
         "Muak",
         "Myeong",
         "naver",
+        "Noryangjin",
         "Nowon",
         "plusplus",
         "Pojangmachas",
         "popperjs",
+        "Sallim",
+        "Sallimg",
         "Sangam",
         "Seocho",
         "Seodaemun",
         "seolleongtang",
         "Seongbuk",
         "Seongdong",
+        "Seongsu",
         "Sinchon",
         "Sindaebang",
         "sonarjs",
         "Songpa",
+        "Sungin",
         "Suyu",
         "Wbkw",
+        "Wonseo",
+        "wrikel",
         "wvanderp",
         "Yangcheon",
         "Yeongdeungpo",
