--- a/package.json
+++ b/package.json
@@ -13,46 +13,48 @@
   },
   "homepage": "https://github.com/wvanderp/Welcome-to-my-DONG-Map#readme",
   "dependencies": {
-    "@types/geojson": "^7946.0.11",
+    "@types/geojson": "^7946.0.14",
     "ajv": "^8.12.0",
     "bootstrap": "^5.3.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "reactstrap": "^9.2.0",
-    "youtube-dl-exec": "^2.4.13"
+    "reactstrap": "^9.2.2",
+    "youtube-dl-exec": "^2.5.6"
   },
   "devDependencies": {
-    "@parcel/transformer-inline-string": "^2.9.3",
-    "@parcel/transformer-sass": "^2.9.3",
-    "@types/leaflet": "^1.9.4",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
+    "@parcel/transformer-inline-string": "^2.11.0",
+    "@parcel/transformer-sass": "^2.11.0",
+    "@types/leaflet": "^1.9.8",
+    "@types/react": "^18.2.51",
+    "@types/react-dom": "^18.2.18",
     "@types/react-leaflet": "^2.8.2",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "eslint": "^8.49.0",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-nibble": "^8.1.0",
     "eslint-plugin-compat": "^4.2.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-sonarjs": "^0.21.0",
-    "eslint-plugin-unicorn": "^48.0.1",
-    "parcel": "^2.9.3",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-sonarjs": "^0.23.0",
+    "eslint-plugin-unicorn": "^50.0.1",
+    "parcel": "^2.11.0",
     "parcel-transformer-geojson": "^0.0.4",
     "process": "^0.11.10",
-    "sass": "^1.68.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "sass": "^1.70.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
     "app": "npm run clean && parcel serve app/index.html",
     "build": "npm run clean &&  parcel build --no-source-maps --public-url /Welcome-to-my-DONG-Map --dist-dir ./gitBuild app/index.html",
-    "lint": "npm run tsc && eslint --ext ts,tsx,json,js app/ collect/",
+    "lint": "npm-run-all -c -s tsc eslint",
     "tsc": "tsc --noEmit",
+    "eslint": "eslint --ext ts,tsx,js app/ collect/",
     "collect": "ts-node collect && npm run lintData",
     "lintData": "ts-node collect/lint.ts",
     "clean": "rimraf .parcel-cache dist"
